--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,7 +11,7 @@ build: off  # будем использовать свой скрипт сбор
 
 install:
   # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
-  - java -jar ./artifacts/app-card-delivery &
+  - java -jar ./artifacts/app-card-delivery.jar -port=9999 &
 
 build_script:
   - chmod +x gradlew
